--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>maze-adventure</title>
+    <title>Maze Adventure</title>
+    <link rel="stylesheet" href="static/sierra/sierra.css">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="container"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
