--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Maze Adventure</title>
-    <link rel="stylesheet" href="static/sierra/sierra.css">
-  </head>
-  <body>
-    <div id="app" class="container"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Maze Adventure</title>
+  <link rel="stylesheet" href="static/sierra/sierra.css">
+  <link rel="stylesheet" href="./main.css">
+</head>
+
+<body>
+  <div id="app" class="container"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
