--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>Maze Adventure</title>
   <link rel="stylesheet" href="static/sierra/sierra.css">
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="static/sierra/main.css">
 </head>
 
 <body>
